# HackEurope

./: .env.example  .gitignore  DATA_STRUCTURE.md  Dockerfile  README.md  SSE_README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: honeypot.yml
backend/: config.py  constants.py  exceptions.py  logger.py  main.py
backend/agents/data/: honeypot_logs.json
backend/agents/mitre_classifier/: env_setup.py  main.py  prompts.py
backend/api/: bus.py  classification.py  dashboard.py  fixer.py  logs.py  router.py  rules.py
backend/wazuh_rules/: __init__.py  rule_matcher.py
cowrie_config/: session_watcher.py
cowrie_config/cowrie-env/: pyvenv.cfg
data/: mitre_attack.json
frontend/: .env.example  README.md  diagnose_classifier.py  package-lock.json  package.json
frontend/src/: App.css  App.jsx  config.js  constants.js  index.css
frontend/src/components/: ClassificationDashboard.jsx  ConnectionStatus.jsx  DashboardComponents.jsx  ErrorBoundary.jsx  FixerDashboard.jsx  Home.jsx  HoneypotConfig.jsx  Layout.jsx  LoadingSpinner.jsx  RulesConfig.jsx  Sidebar.jsx  index.js
frontend/src/hooks/: useSSE.js
frontend/src/pages/: Analytics.jsx  Dashboard.jsx  Projects.jsx  Settings.jsx  Updates.jsx
frontend/src/services/: api.js
frontend/src/styles/: Layout.css  Sidebar.css  pages.css  variables.css
frontend/src/utils/: formatters.js
llm/: api_call.py  test_api.py
logs/: .gitkeep
metra_classifier/: env_setup.py  main.py  prompts.py
scripts/: agent.py  run_mitre_classifier.py  start_cowrie.py
src/: mitre.py
wazuh-rules/: local_rules.xml
